# LG-FLOW

./: .gitignore  CMakeLists.txt  HISTORY.md  README.md
cases/lid_driven_cavity/: case.cfg  case_validate.cfg  ghia1982_re100.csv
src/: main.cpp
src/core/: BoundaryCondition.cpp  BoundaryCondition.hpp  Field.cpp  Field.hpp  Mesh.cpp  Mesh.hpp
src/io/: MeshReader.cpp  MeshReader.hpp  VTKWriter.cpp  VTKWriter.hpp
src/solver/: Discretization.cpp  Discretization.hpp  NavierStokesSolver.cpp  NavierStokesSolver.hpp  PressureSolver.cpp  PressureSolver.hpp
src/utils/: Config.cpp  Config.hpp  Logger.cpp  Logger.hpp
src/validate/: lid_driven_cavity_validate.cpp
tests/: CMakeLists.txt  test_bc.cpp  test_config.cpp  test_discretization.cpp  test_field.cpp  test_logger.cpp  test_mesh.cpp  test_pressure_solver.cpp  test_solver_convection.cpp  test_solver_init.cpp  test_solver_params.cpp  test_solver_pressure_corrections.cpp  test_solver_run.cpp  test_vtk_writer.cpp
